# Bimpala_ModularArithmetic

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  smoke_test.py  train.py
models/: bilinear_CNN.py  bilinear_IMPALA.py  relu_CNN_old.py  relu_IMPALA.py
src/: data.py  embedding.py  loss.py  metrics.py
src/models/: bilinear_lstm.py  relu_modular.py  semi_bilinear_modular.py  strictly_bilinear_IMPALA.py  strictly_bilinear_modular.py  vanilla_lstm.py
wandb/: latest-run
wandb/run-20260327_122001-txd5wnwf/: run-txd5wnwf.wandb
wandb/run-20260327_122001-txd5wnwf/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260327_122026-y5909qwy/: run-y5909qwy.wandb
wandb/run-20260327_122026-y5909qwy/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260327_122434-s6lhpr7x/: run-s6lhpr7x.wandb
wandb/run-20260327_122434-s6lhpr7x/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260327_122436-w8cbuvkg/: run-w8cbuvkg.wandb
wandb/run-20260327_122436-w8cbuvkg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260327_122437-kiuf47y8/: run-kiuf47y8.wandb
wandb/run-20260327_122437-kiuf47y8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260327_122439-rwm55whh/: run-rwm55whh.wandb
wandb/run-20260327_122439-rwm55whh/files/: config.yaml  wandb-metadata.json  wandb-summary.json
